--- a/cv/index.html
+++ b/cv/index.html
@@ -31,7 +31,7 @@
         <div id="infos">
             <h1>Contact</h1>
             <ul>
-                <li><a "mailto:celiatruel@gmail.com">celiatruel@gmail.com</a></li>
+                <li><a "mailto:cetrl@proton.me">cetrl@proton.me</a></li>
                 <li>Nantes</li>
                 <li><a href="www.linkedin.com/in/celiatruel">linkedin.com/in/celiatruel</a></li>
                 <li><a href="https://github.com/cetrl">github.com/cetrl</a></li>
